# technisync

./: .dockerignore  .exmaple.env  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  config.py  dns_client.py  docker-compose.dev.yml  docker-compose.example.yml  main.py  pyproject.toml  sync_manager.py
.github/workflows/: docker-build.yml
technisync/: config.py  db_manager.py  dns_client.py  models.py  sync_manager.py  utils.py
