[tool.poetry]
name = "technisync"
version = "0.1.0"
description = "Technitium DNS sync tool"
authors = ["muffin <MonsterMuffin@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
PyYAML = "^6.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
pytest = "^8.3.3"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
